// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`wallet should deploy 1`] = `
[
  {
    "type": "deploy",
  },
  {
    "message": {
      "body": {
        "text": "Deploy",
        "type": "text",
      },
      "bounce": true,
      "from": "kQBbjpCWk51tkYZGsmjT-XQUL0QGlxJD4fQHGbYhdCbwQlX-",
      "to": "kQAcvdB4xSQmkxf2zDi25hJvL5VX3uYjM7vHVhETpo72gGbk",
      "type": "internal",
      "value": 10000000000n,
    },
    "type": "received",
  },
  {
    "gasUsed": 4747n,
    "type": "processed",
  },
  {
    "message": {
      "body": {
        "cell": "x{0000007B0000000001800B71D212D273ADB230C8D64D1A7F2E8285E880D2E2487C3E80E336C42E84DE084A04A817C800}
 x{820B8A3C23C10460E87A67DAAD3F23488EEF92966184DF661EEB0650701E2616A0609354DF656993A5BE7C5D52CBA9F4EC9DBF4DE0A006EB7AC44F5FD3B3DF05}",
        "type": "cell",
      },
      "bounce": true,
      "from": "kQBbjpCWk51tkYZGsmjT-XQUL0QGlxJD4fQHGbYhdCbwQlX-",
      "to": "kQAcvdB4xSQmkxf2zDi25hJvL5VX3uYjM7vHVhETpo72gGbk",
      "type": "internal",
      "value": 1000000000n,
    },
    "type": "received",
  },
  {
    "gasUsed": 8882n,
    "type": "processed",
  },
  {
    "messages": [
      {
        "body": {
          "type": "empty",
        },
        "bounce": true,
        "from": "kQAcvdB4xSQmkxf2zDi25hJvL5VX3uYjM7vHVhETpo72gGbk",
        "to": "kQBbjpCWk51tkYZGsmjT-XQUL0QGlxJD4fQHGbYhdCbwQlX-",
        "type": "internal",
        "value": 10000000000n,
      },
    ],
    "type": "sent",
  },
]
`;

exports[`wallet should deploy 2`] = `
[
  {
    "message": {
      "body": {
        "text": "notify",
        "type": "text",
      },
      "bounce": true,
      "from": "kQBbjpCWk51tkYZGsmjT-XQUL0QGlxJD4fQHGbYhdCbwQlX-",
      "to": "kQAcvdB4xSQmkxf2zDi25hJvL5VX3uYjM7vHVhETpo72gGbk",
      "type": "internal",
      "value": 1000000000n,
    },
    "type": "received",
  },
  {
    "gasUsed": 5127n,
    "type": "processed",
  },
]
`;

exports[`wallet should deploy 3`] = `
[
  {
    "message": {
      "body": {
        "type": "empty",
      },
      "bounce": true,
      "from": "kQBbjpCWk51tkYZGsmjT-XQUL0QGlxJD4fQHGbYhdCbwQlX-",
      "to": "kQAcvdB4xSQmkxf2zDi25hJvL5VX3uYjM7vHVhETpo72gGbk",
      "type": "internal",
      "value": 1000000000n,
    },
    "type": "received",
  },
  {
    "gasUsed": 4047n,
    "type": "processed",
  },
]
`;
